syntax = "proto2";

message AgentListRequest {}

message AgentView {
  required string status = 1;
  required string name = 2;
  required string id = 3;
}

message AgentListResponse {
  repeated AgentView agentList = 1;
}

service InfoEndpoint {
  rpc AgentList(AgentListRequest) returns (AgentListResponse);
}

